internationalize the index page

--- a/src/i18n_zh_CN.properties
+++ b/src/i18n_zh_CN.properties
@@ -1,4 +1,26 @@
-username=用户名
-password=密码
-age=年龄
-sex=性别
+USERNAME=用户名
+PASSWORD=密码
+AGE=年龄
+SEX=性别
+BOOK=书城
+LOGIN=登录
+REGISTER=注册
+WELCOME=欢迎
+TO_ONLINE_BOOK_MARKET=来到网上书城
+MY_ORDERS=我的订单
+LOG_OUT=注销
+SHOPPING_CART=购物车
+BACKSTAGE_MANAGEMENT=后台管理
+PRICE=价格：
+CURRENCY=元
+SEARCH=搜索
+SHOPPING_CART_IS_EMPTY=当前购物车为空
+YOU_JUST_ADDED=您刚刚将
+TO_SHOPPING_CART=添加到购物车
+BOOKNAME=书名: 
+AUTHOR=作者: 
+PRICE=价格: 
+SALES=销量: 
+STOCK=库存: 
+ADD_TO_CART=添加到购物车
+ONLINE_BOOK_MARKET=网上书城
